[gd_scene load_steps=9 format=2]

[ext_resource path="res://entidades/jugador/Jugador.gd" type="Script" id=1]
[ext_resource path="res://entidades/jugador/EstadoControlador.gd" type="Script" id=2]
[ext_resource path="res://entidades/jugador/estados/Quieto.gd" type="Script" id=3]
[ext_resource path="res://entidades/jugador/estados/Movimiento.gd" type="Script" id=4]
[ext_resource path="res://entidades/jugador/img/player.png" type="Texture" id=5]
[ext_resource path="res://entidades/jugador/estados/Dasheando.gd" type="Script" id=6]
[ext_resource path="res://entidades/jugador/estados/Atacando.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]

[node name="Jugador" type="KinematicBody2D"]
position = Vector2( 107, 39 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
vida_inicial = 100
rapidez_inicial = 120
danio_base_inicial = 40
precision_inicial = 0.4

[node name="EstadoControlador" type="Node" parent="."]
script = ExtResource( 2 )
ESTADO_INICIAL = NodePath("Quieto")

[node name="Quieto" type="Node" parent="EstadoControlador"]
script = ExtResource( 3 )

[node name="Movimiento" type="Node" parent="EstadoControlador"]
script = ExtResource( 4 )

[node name="Dasheando" type="Node" parent="EstadoControlador"]
script = ExtResource( 6 )

[node name="TimerDash" type="Timer" parent="EstadoControlador/Dasheando"]
wait_time = 0.2
one_shot = true

[node name="TimerCD" type="Timer" parent="EstadoControlador/Dasheando"]
one_shot = true

[node name="Atacando" type="Node" parent="EstadoControlador"]
script = ExtResource( 7 )

[node name="RayoCD" type="Timer" parent="EstadoControlador/Atacando"]

[node name="BastonazoCD" type="Timer" parent="EstadoControlador/Atacando"]

[node name="Label" type="Label" parent="EstadoControlador"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Rayo" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2
[connection signal="atacando" from="." to="EstadoControlador/Atacando" method="_on_atacando"]
[connection signal="timeout" from="EstadoControlador/Dasheando/TimerDash" to="EstadoControlador/Dasheando" method="_on_TimerDash_timeout"]
